# agentworks

./: .dockerignore  .gitignore  README.md
agent-runtime/: pyproject.toml
agent-runtime/agent_runtime/: __init__.py  events.py  executor.py  mcp_tools.py  model_client.py  pricing.py  spec.py
agent-runtime/agent_runtime/executors/: __init__.py  autogen_graph.py  autogen_group.py  autogen_single.py  autogen_swarm.py  echo.py  factory.py  goal_loop.py
agent-runtime/tests/: test_echo.py  test_goal_loop.py  test_mcp_tools.py  test_model_client.py  test_pricing.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_work_image.py  0003_provider_apikey.py  0004_templates.py  0005_work_loop_config.py  0006_artifacts.py  0007_artifact_instances.py  0008_artifact_schedules.py  0009_user_api_keys.py  0012_artifact_jobs.py  (+26 more)
backend/app/: cron_runner.py  main.py  workers.py
backend/scripts/: _seed_owner.py  backfill_template_summaries.py  seed.py  seed_alltag_templates.py  seed_github_mcp.py  seed_gmail_template.py  seed_google_calendar_template.py  seed_mcp_demo_template.py  seed_website_builder_template.py  seed_wordpress_template.py
backend/tests/: conftest.py  test_admin_topup_mode.py  test_agent_profile.py  test_agent_tools.py  test_agents.py  test_artifact_chat.py  test_artifact_chat_runtime.py  test_artifact_connections.py  test_artifact_delete.py  test_artifact_files.py  test_artifact_jobs.py  test_artifact_schedules.py  test_artifact_turn.py  test_artifacts.py  test_auth_session.py  test_avatars.py  test_billing.py  test_billing_report.py  test_canvas_render.py  test_canvas_render_tabs.py  test_canvas_slots.py  test_chains.py  test_chains_api.py  test_chat_billing.py  test_chat_summary.py  test_clock.py  test_cloud_models.py  test_connection_registry.py  test_creator_royalty.py  test_crypto.py  test_deepseek.py  test_file_text.py  test_friends.py  test_goal_loop_plumbing.py  test_google_oauth.py  test_html_templates.py  test_image_gen.py  test_jobs_backfill.py  test_master_page.py  test_mcp_catalog.py  (+28 more)
(+223 files in other folders)
