[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentworks-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.4",
  "dramatiq[redis]>=1.17",
  "redis>=5.0",
  "httpx>=0.27",
  "google-auth>=2.34",
  "structlog>=24.4",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "agent-runtime",
  "voyageai>=0.3; python_version >= '3.11'",
  "pgvector>=0.3",
  "apscheduler>=3.10",
  "python-multipart>=0.0.12",
  "croniter>=2.0",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "openai>=1.0",
  "Pillow>=10.0",
  "paramiko>=3.4",
  "nh3>=0.2",
  "stripe>=9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[tool.uv.sources]
agent-runtime = { path = "../agent-runtime", editable = true }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
